--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,19 @@
 [project]
-name = "py-scss"
+name = "my_project"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "serii_burduja",email = "seriiburduja@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.10,<4.0"
 dependencies = [
-    "autopep8 (==2.3.2)",
-    "flake8 (==7.2.0)",
-    "mccabe (==0.7.0)",
-    "mypy (==1.16.0)",
-    "mypy-extensions (==1.1.0)",
-    "pathspec (==0.12.1)",
-    "pycodestyle (==2.13.0)",
-    "pyflakes (==3.3.2)",
-    "pyfzf (==0.3.1)",
-    "pyperclip (==1.9.0)",
-    "simple-term-menu (==1.6.6)",
-    "termcolor (==2.4.0)",
-    "typing-extensions (==4.14.0)"
+    "autopep8==2.3.2",
+    "flake8==7.2.0",
+    "mccabe==0.7.0",
+    "mypy==1.16.0",
+    "mypy-extensions==1.1.0",
+    "pathspec==0.12.1",
+    "pycodestyle==2.13.0",
+    "pyflakes==3.3.2",
+    "pyfzf==0.3.1",
+    "pyperclip==1.9.0",
+    "simple-term-menu==1.6.6",
+    "termcolor==2.4.0",
+    "typing-extensions==4.14.0",
 ]
-
