--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 description = ""
 dependencies = [
     "mccabe==0.7.0",
-    "mypy-extensions==1.1.0",
     "pathspec==0.12.1",
     "pycodestyle==2.13.0",
     "pyflakes==3.3.2",
     "pyfzf==0.3.1",
     "pyperclip==1.9.0",
+    "ruff>=0.12.2",
     "simple-term-menu==1.6.6",
     "termcolor==2.4.0",
     "typing-extensions==4.14.0",
