--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,40 +2,31 @@
 name = "my_project"
 version = "0.1.0"
 description = ""
-dependencies = [
-    "mccabe==0.7.0",
-    "pathspec==0.12.1",
-    "pycodestyle==2.13.0",
-    "pyflakes==3.3.2",
-    "pyfzf==0.3.1",
-    "pyperclip==1.9.0",
-    "ruff>=0.12.2",
-    "simple-term-menu==1.6.6",
-    "termcolor==2.4.0",
-    "typing-extensions==4.14.0",
-]
 
 [tool.ruff]
 line-length = 88
 exclude = [
-    "migrations",
-    "tests",
-    "docs",
-    "build",
-    "dist",
-    "venv",
-    ".venv",
-    ".git",
-    "__pycache__",
+  "migrations",
+  "tests",
+  "docs",
+  "build",
+  "dist",
+  "venv",
+  ".venv",
+  ".git",
+  "__pycache__",
 ]
 fix = true
+unsafe-fixes = true
+target-version = "py312" # <- specify Python 3.12 explicitly here
 
 [tool.ruff.lint]
 select = [
-    "F401",  # Unused import
-    "F403",  # Wildcard import
-    "F405",  # Name may be undefined, or defined from star imports
-    "F841",  # Local variable is assigned to but never used
-    "E501",  # Line too long
-    "I",     # Import sorting (isort-compatible)
+  "F401", # Unused import
+  "F403", # Wildcard import
+  "F405", # Name may be undefined, or defined from star imports
+  "F841", # Local variable is assigned to but never used
+  "E501", # Line too long
+  "I",    # Import sorting (isort-compatible)
 ]
+
